# SpectraPro

./: .env.production  .env.template  .gitignore  AI_ANALYSIS_INTEGRATION.md  AssetTimeline.test.tsx  BATCH_SCANNING_FEATURE.md  BULK_SCAN_IMPLEMENTATION.md  BULK_SCAN_UI_IMPLEMENTATION.md  CHANGELOG-security-improvements.md  CHANGELOG.md  CLAUDE.md  CLI_TOOLS_REVIEW.md  CODE_ANALYSIS.md  CODE_SNIPPETS.md  COPILOT_AGENT_ENVIRONMENT.md  Caddyfile  Caddyfile.production  ChangeIntelligenceDashboard.test.tsx  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.txt  DESIGN_SYSTEM.md  DESIGN_SYSTEM_AUDIT.md  DISCOVERY.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile.scanner  ENHANCEMENT_SUMMARY.txt  ENTERPRISE_SCAN_ARCHITECTURE.md  EXECUTIVE_SUMMARY.txt  EXPOSURE_MODULE_ARCHITECTURE.md  EXPOSURE_MODULE_IMPLEMENTATION.md  GEMINI.md  HTML_REPORT_SHOWCASE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_PHASE1.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INDEX_ALL_RESOURCES.md  INDEX_PHASE1.md  INTEGRATION_COMPLETE.md  (+65 more)
.claude/: launch.json  ralph-loop.local.md  settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
cloudflared/: config.yml
config/: config.yaml
docs/: API.md  ENHANCED_REPORTS.md  PROJECT_STRUCTURE.md  QUICKSTART.md
examples/: simple_scan.py  targets.txt
platform/: ARCHITECTURE.md  BULK_SCAN_API.md  IMPLEMENTATION_SUMMARY.md  PHASE_ORCHESTRATION_IMPLEMENTATION.md  QUICK_START.sh  README.md  START_HERE.md  STATUS.md  TAG_VALIDATION_FIX_EVIDENCE.md  start-platform.sh
scripts/: auto-setup.sh  bootstrap-droplet.sh  deploy-to-folder.sh  health-check-docker.sh  health-check.sh  migrate.sh  regenerate_report.py  setup-docker.sh  setup-linux-server.sh  setup.sh  start-all.sh  start-docker.sh  start-local.sh  start_api.sh  (+2 more)
(+252 files in other folders)
